--- a/Project/css/previewsStyles/agencyPreview.css
+++ b/Project/css/previewsStyles/agencyPreview.css
@@ -94,7 +94,12 @@ section {
     color: var(--teal);
 }
 
-.wrapper form input {
+.name, .number, .address, .code {
+    margin-right: 20px;
+}
+
+.name input, .address input, .code input {
+    width: 500px;
     padding: 7px;
     margin-bottom: 10px;
     outline: none;
@@ -102,73 +107,11 @@ section {
     background-color: var(--peach);
 }
 
-input::placeholder {
-    color: var(--tan);
-    font-style: italic;
-}
-
-.accountType, .accountNumber, .openingBalance, .accountHolder, .openingDate {
-    margin-right: 20px;
-}
-
-.accountType input, .openingBalance input, .openingDate input {
-    width: 200px;
-}
-
-.accountNumber input {
-    width: 300px;
-}
-
-.accountHolder input {
-    width: 400px;
-}
-
-.accountType select {
+.number input {
     width: 200px;
     padding: 7px;
-    border: 1px solid rgba(119, 104, 71, 0.459);
-    color: var(--brown);
-    background-color: var(--peach);
+    margin-bottom: 10px;
     outline: none;
-}
-
-select .dropdownHolder {
-    color: var(--tan);
-}
-
-.openingDate input[type="date"] {
-    width: 200px;
-    padding: 7px;
     border: 1px solid rgba(119, 104, 71, 0.459);
-    color: var(--tan);
     background-color: var(--peach);
-    outline: none;
-}
-
-.confirm-cancel-buttons {
-    margin-top: 100px;
-    position: relative;
-    left: 5%;
-}
-
-.confirm-cancel-buttons button {
-    cursor: pointer;
-}
-
-.confirm-cancel-buttons .cancel {
-    background-color: var(--tan);
-    color: var(--peach);
-    width: 80px;
-    height: 35px;
-    border-radius: 10px;
-    border: none;
-}
-
-.confirm-cancel-buttons .save {
-    background-color: var(--brown);
-    color: var(--peach);
-    width: 60px;
-    height: 35px;
-    border-radius: 10px;
-    border: none;
 }
