--- a/Project/css/registrationsStyles/agencyRegister.css
+++ b/Project/css/registrationsStyles/agencyRegister.css
@@ -117,7 +117,9 @@ section {
 }
 
 .confirm-cancel-buttons {
-    margin: 100px 0 0 600px;
+    margin-top: 100px;
+    position: relative;
+    left: 60%;
 }
 
 .confirm-cancel-buttons button {
