--- a/Project/css/registrationsStyles/bankRegister.css
+++ b/Project/css/registrationsStyles/bankRegister.css
@@ -108,7 +108,9 @@ section {
 }
 
 .confirm-cancel-buttons {
-    margin: 100px 0 0 60px;
+    margin-top: 100px;
+    position: relative;
+    left: 40%;
 }
 
 .confirm-cancel-buttons .cancel {
@@ -118,6 +120,7 @@ section {
     height: 35px;
     border-radius: 10px;
     border: none;
+    cursor: pointer;
 }
 
 .confirm-cancel-buttons .save {
@@ -127,4 +130,5 @@ section {
     height: 35px;
     border-radius: 10px;
     border: none;
+    cursor: pointer;
 }
