--- a/Project/css/styles.css
+++ b/Project/css/styles.css
@@ -33,12 +33,12 @@ body {
     justify-content: center;
     flex-direction: column;
     background-color: var(--tan);
-    width: 500px;
+    width: 600px;
     max-width: 90%;
-    min-height: 550px;
+    min-height: 650px;
     border-radius: 5px 30px;
     position: absolute;
-    transform: translate(-40%, 10%);
+    transform: translate(-40%, 9%);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.719);
     z-index: 2;
     transition: all 0.6s ease-in-out;
@@ -57,29 +57,29 @@ body {
 .container .login-container h1 {
     color: var(--brown);
     display: flex;
-    transform: translateY(-60px);
-    font-size: 35px;
+    transform: translateY(-80px);
+    font-size: 40px;
 }
 
 /* Input box */
 
 .container .login-container .input-box {
     position: relative;
-    width: 380px;
-    padding: 15px;
-    margin: 8px;
+    width: 480px;
+    padding: 20px;
+    margin: 15px;
     border: 0;
     border-radius: 10px;
     outline: none;
     background-color: var(--wheat);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.788), inset 4px 0 0 var(--brown);
-    transform: translateY(-15px);
+    transform: translateY(-25px);
 }
 
 /* Input */
 
 .container .login-container input {
-    width: 300px;
+    width: 400px;
     margin: 8px 50px;
     border: 0;
     outline: none;
@@ -116,17 +116,17 @@ body {
 
 .container .login-container .remember-forgot {
     vertical-align: middle;
-    font-size: 14px;
+    font-size: 16px;
     color: var(--peach);
     position: relative;
-    transform: translateY(12px);
+    transform: translateY(5px);
 }
 
 /* 'Remember Me' checkbox */
 
 .container .login-container .remember-forgot label input {
-    width: 15px;
-    height: 15px;
+    width: 18px;
+    height: 18px;
     margin: 0;
     vertical-align: middle;
     transform: translate(-10px, -2px);
@@ -137,8 +137,8 @@ body {
 
 .container .login-container a {
     color: var(--peach);
-    font-size: 14px;
-    margin-left: 97px;
+    font-size: 16px;
+    margin-left: 160px;
 }
 
 /* 'Log in' button */
@@ -147,8 +147,8 @@ body {
     display: flex;
     background-color: var(--brown);
     color: var(--peach);
-    font-size: 15px;
-    padding: 13px 50px;
+    font-size: 18px;
+    padding: 18px 50px;
     margin: 0;
     border: 0;
     border-radius: 8px;
@@ -165,16 +165,16 @@ body {
 .container .login-container button i {
     vertical-align: middle;
     transform: translate(-5px, 5px);
-    font-size: 12px;
+    font-size: 14px;
 }
 
 /* Right box (Sign Up side) */
 
 .toggle-container {
     background-color: var(--teal);
-    width: 600px;
+    width: 700px;
     max-width: 100%;
-    min-height: 650px;
+    min-height: 750px;
     border-radius: 30px 5px;
     transform: translateX(40%);
     display: flex;
@@ -190,7 +190,7 @@ body {
 .toggle-container h1 {
     color: var(--tan);
     text-align: center;
-    font-size: 35px;
+    font-size: 45px;
 }
 
 /* Subtitle */
@@ -206,8 +206,8 @@ body {
     background-color: var(--tan);
     color: var(--brown);
     transform: translate(55%, 100%);
-    font-size: 15px;
-    padding: 13px 50px;
+    font-size: 18px;
+    padding: 18px 50px;
     border: 0;
     border-radius: 8px;
     font-weight: 900;
@@ -217,11 +217,13 @@ body {
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.514);
 }
 
+/* Sign Up */
+
 .hidden-container {
     background-color: var(--teal);
-    width: 600px;
+    width: 700px;
     max-width: 100%;
-    min-height: 650px;
+    min-height: 750px;
     border-radius: 30px 5px;
     display: flex;
     align-items: center;
@@ -246,7 +248,7 @@ body {
     color: var(--tan);
     display: flex;
     transform: translateY(-60px);
-    font-size: 35px;
+    font-size: 40px;
 }
 
 .hidden-container .login-return i {
@@ -255,8 +257,8 @@ body {
 
 .hidden-container .signUp-container .input-box {
     position: relative;
-    width: 480px;
-    padding: 15px;
+    width: 530px;
+    padding: 18px;
     margin: 8px;
     border: 0;
     border-radius: 10px;
@@ -298,7 +300,7 @@ body {
 
 .hidden-container .signUp-container .rememberMe-checkbox {
     vertical-align: middle;
-    font-size: 14px;
+    font-size: 16px;
     color: var(--tan);
     position: relative;
     transform: translateY(12px);
@@ -306,8 +308,8 @@ body {
 }
 
 .hidden-container .signUp-container .rememberMe-checkbox label input {
-    width: 15px;
-    height: 15px;
+    width: 18px;
+    height: 18px;
     margin: 0;
     transform: translate(-10px, -2px);
     vertical-align: middle;
@@ -321,8 +323,8 @@ body {
     text-align: center;
     background-color: var(--tan);
     color: var(--brown);
-    font-size: 15px;
-    padding: 13px 50px;
+    font-size: 18px;
+    padding: 18px 50px;
     margin: 0;
     border: 0;
     border-radius: 8px;
@@ -364,7 +366,7 @@ body {
 
 @keyframes hideSlideLeftToCenter {
     0% {
-        transform: translate(-40%, 10%);
+        transform: translate(-40%, 9%);
     }
 
     100% {
@@ -426,7 +428,7 @@ body {
 
     100% {
         opacity: 1;
-        transform: translate(-40%, 10%);
+        transform: translate(-40%, 9%);
         z-index: 2;
     }
 }
@@ -464,3 +466,9 @@ body {
         z-index: 0;
     }
 }
+
+/* Mobile Accessibility
+
+@media screen and (max-width: 768px) {
+    
+} */
