--- a/Project/css/listsStyles/agencyList.css
+++ b/Project/css/listsStyles/agencyList.css
@@ -46,12 +46,22 @@ header {
     color: var(--teal);
 }
 
+.topbar .toggle .closeSideBarMenu {
+    transition: opacity 0.5s ease;
+}
+
+.topbar .toggle .sideBarMenuToggle {
+    display: none;
+    opacity: 0;
+    transition: opacity 0.5s ease, display 0.5s ease;
+}
+
 .topbar .header-functions {
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: absolute;
-    right: 320px;
+    right: 60px;
     top: 20px;
 }
 
@@ -334,5 +344,63 @@ table {
     }
     to {
         transform: rotate(360deg);
+    }
+}
+
+@keyframes transition1 {
+    0% {
+        transform: rotate(360deg);
+        opacity: 1;
+    }
+    100% {
+        transform: rotate(0);
+        opacity: 0;
+    }
+}
+
+@keyframes transition2 {
+    0% {
+        transform: rotate(0);
+        opacity: 0;
+    }
+    100% {
+        transform: rotate(360deg);
+        opacity: 1;
+    }
+}
+
+@keyframes slide {
+    from {
+        left: 280px;
+    }
+    to {
+        left: 0;
+    }
+}
+
+@keyframes shrink {
+    from {
+        width: 280px;
+    }
+    to {
+        width: 0;
+    }
+}
+
+@keyframes expand {
+    from {
+        width: 0;
+    }
+    to {
+        width: 280px;
+    }
+}
+
+@keyframes backSlide {
+    from {
+        left: 0;
+    }
+    to {
+        left: 280px;
     }
 }
