--- a/Project/screens/views/agencyList.html
+++ b/Project/screens/views/agencyList.html
@@ -9,10 +9,11 @@
     <title>Agency - Empire Finance Network</title>
 </head>
 <body>
-    <header>
+    <header id="header">
         <div class="topbar">
             <div class="toggle">
-                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-bars sideBarMenuToggle" id="openSideBarMenu" onclick="openMenu()"></i>
+                <i class="fa-solid fa-xmark closeSideBar" id="closeSideBarMenu" onclick="closeMenu()"></i>
             </div>
 
             <div class="header-functions">
@@ -21,7 +22,7 @@
                 </div>
 
                 <div class="aboutUs-icon">
-                    <a href="https://github.com/LazVeiga">
+                    <a href="https://github.com/LazVeiga" target="_blank">
                         <i class="fa-brands fa-github"></i>
                     </a>
                 </div>
@@ -31,7 +32,7 @@
 
     <nav>
         <div class="container">
-            <div class="navbar">
+            <div class="navbar" id="sideBar">
                 <div class="logo">
                     <img src="../../images/Empire_Finance_Network_logos_4/Empire_Finance_Network-logos_transparent_vintage_resized.png">
                 </div>
@@ -52,7 +53,7 @@
                     </li>
 
                     <li>
-                        <a href="https://wa.me/558281710710/?text=Support">
+                        <a href="https://wa.me/558281710710/?text=Support" target="_blank">
                             <span class="icon">
                                 <i class="fa-brands fa-whatsapp"></i>    
                             </span>
