Mobile responsiveness | Lists edit screens

--- a/Project/css/passwordRecovery.css
+++ b/Project/css/passwordRecovery.css
@@ -135,3 +135,39 @@ body {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.719);
     transform: translateY(30px);
 }
+
+@media screen and (max-width: 500px) {
+    .container {
+        width: 350px;
+        max-width: 100%;
+        min-height: 400px;
+    }
+
+    .container h1 {
+        transform: translateY(-30px);
+        font-size: 25px;
+    }
+
+    .container .input-box {
+        position: relative;
+        width: 300px;
+        padding: 10px;
+        margin: 8px;
+        transform: translateY(-5px);
+    }
+
+    .container input {
+        width: 210px;
+    }
+    
+    .container .input-box input::placeholder {
+        font-size: 12px;
+    }
+    
+    .container button {
+        font-size: 14px;
+        padding: 13px 30px;
+        font-weight: 800;
+        transform: translateY(25px);
+    }
+}
