--- a/Project/css/previewsStyles/agencyPreview.css
+++ b/Project/css/previewsStyles/agencyPreview.css
@@ -115,3 +115,33 @@ section {
     border: 1px solid rgba(119, 104, 71, 0.459);
     background-color: var(--peach);
 }
+
+@media screen and (max-width: 1800px) {
+    section {
+        padding: 30px;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    section {
+        padding: 60px 90px;
+    }
+
+    .name input, .address input, .code input, .number input {
+        width: 600px;
+    }
+}
+
+@media screen and (max-width: 580px){
+    body {
+        overflow: hidden;
+    }
+
+    section {
+        padding: 30px;
+    }
+
+    .name input, .address input, .code input, .number input {
+        width: 320px;
+    }
+}
