--- a/Project/screens/views/agencyList.html
+++ b/Project/screens/views/agencyList.html
@@ -38,7 +38,9 @@
                 </div>
 
                 <div class="profile">
-                    <img src="../../images/Profile_Template_Pic/profile_template_woman_pic.jpg">
+                    <a href="../user/profileSettings.html">
+                        <img src="../../images/Profile_Template_Pic/profile_template_woman_pic.jpg">
+                    </a>
                     <span>Fake Profile</span>
                 </div>
 
@@ -166,7 +168,7 @@
                                 <td>#</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
@@ -178,7 +180,7 @@
                                 <td>#</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
@@ -190,7 +192,7 @@
                                 <td>#</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
@@ -202,7 +204,7 @@
                                 <td>#</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
@@ -214,7 +216,7 @@
                                 <td>#</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
