--- a/Project/screens/views/peopleList.html
+++ b/Project/screens/views/peopleList.html
@@ -38,7 +38,9 @@
                 </div>
 
                 <div class="profile">
-                    <img src="../../images/Profile_Template_Pic/profile_template_woman_pic.jpg">
+                    <a href="../user/profileSettings.html">
+                        <img src="../../images/Profile_Template_Pic/profile_template_woman_pic.jpg">
+                    </a>
                     <span>Fake Profile</span>
                 </div>
 
@@ -168,7 +170,7 @@
                                 <td>Gabrielaoliveira@email.com</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
@@ -182,7 +184,7 @@
                                 <td>Leonardopereira@email.com</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
@@ -196,7 +198,7 @@
                                 <td>Isabelamendes@email.com</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
@@ -210,7 +212,7 @@
                                 <td>Camilacosta@email.com</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
@@ -224,7 +226,7 @@
                                 <td>Ricardosantos@email.com</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
