--- a/Project/css/listsStyles/peopleList.css
+++ b/Project/css/listsStyles/peopleList.css
@@ -60,7 +60,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: absolute;
+    position: fixed;
     right: 60px;
     top: 20px;
 }
