--- a/Project/css/styles.css
+++ b/Project/css/styles.css
@@ -23,6 +23,7 @@ body {
     justify-content: center;
     flex-direction: column;
     height: 100vh;
+    overflow: hidden;
 }
 
 /* Left Box (Login side) */
@@ -34,7 +35,7 @@ body {
     flex-direction: column;
     background-color: var(--tan);
     width: 600px;
-    max-width: 90%;
+    max-width: 100%;
     min-height: 650px;
     border-radius: 5px 30px;
     position: absolute;
@@ -166,6 +167,10 @@ body {
     vertical-align: middle;
     transform: translate(-5px, 5px);
     font-size: 14px;
+}
+
+.container .mobileSignUpRedirect {
+    display: none;
 }
 
 /* Right box (Sign Up side) */
@@ -467,8 +472,718 @@ body {
     }
 }
 
-/* Mobile Accessibility
+/* Mobile Accessibility */
 
-@media screen and (max-width: 768px) {
-    
-} */
+@media screen and (max-width: 1300px) {
+    body {
+        overflow: hidden;
+    }
+
+    .container {
+        width: 400px;
+        max-width: 100%;
+        min-height: 550px;
+        transform: translate(-35%, 9%);
+    }
+
+    .container .login-container h1 {
+        font-size: 30px;
+        transform: translateY(-70px);
+    }
+
+    .container .login-container .input-box {
+        width: 320px;
+        padding: 10px;
+        margin: 10px;
+        transform: translateY(-10px);
+    }
+
+    .container .login-container input {
+        width: 220px;
+    }
+
+    .container .login-container input::placeholder {
+        font-size: 12px;
+    }
+
+    .container .login-container .input-box i {
+        font-size: 14px;
+    }
+
+    .container .login-container .remember-forgot {
+        font-size: 14px;
+    }
+
+    .container .login-container .remember-forgot label input {
+        width: 14px;
+        height: 14px;
+        transform: translate(-2px, -2px);
+    }
+
+    .container .login-container a {
+        color: var(--peach);
+        font-size: 14px;
+        margin-left: 60px;
+    }
+
+    .container .login-container button {
+        font-size: 12px;
+        padding: 12px 35px;
+        font-weight: 800;
+        transform: translateY(50px);
+    }
+
+    .container .login-container button i {
+        font-size: 10px;
+    }
+
+    .toggle-container {
+        width: 520px;
+        min-height: 650px;
+        transform: translateX(30%);
+    }
+
+    .toggle-container h1 {
+        font-size: 35px;
+    }
+
+    .toggle-container p {
+        font-size: 10px;
+    }
+
+    .toggle-container button {
+        transform: translate(45px, 30px);
+        font-size: 16px;
+        padding: 12px 35px;
+    }
+
+    .hidden-container {
+        width: 520px;
+        min-height: 750px;
+        backface-visibility: hidden;
+    }
+
+    .hidden-container .signUp-container h1 {
+        transform: translateY(-50px);
+        font-size: 30px;
+    }
+
+    .hidden-container .signUp-container .input-box {
+        width: 370px;
+        padding: 10px;
+        margin: 10px;
+        transform: translateY(-10px);
+    }
+
+    .hidden-container .signUp-container input {
+        width: 320px;
+    }
+
+    .hidden-container .signUp-container input::placeholder {
+        font-size: 12px;
+    }
+
+    .hidden-container .signUp-container i {
+        font-size: 14px;
+    }
+
+    .hidden-container .signUp-container .rememberMe-checkbox {
+        font-size: 14px;
+        transform: translateY(-2px);
+        margin-right: 60%;
+    }
+
+    .hidden-container .signUp-container .rememberMe-checkbox label input {
+        width: 14px;
+        height: 14px;
+        transform: translate(-2px, -2px);
+    }
+
+    .hidden-container .signUp-container button {
+        font-size: 12px;
+        padding: 12px 35px;
+        font-weight: 800;
+        transform: translateY(30px);
+    }
+
+    @keyframes fadeOutSlide {
+        0% {
+            opacity: 0;
+            transform: translateX(30%);
+        }
+
+        25% {
+            opacity: 0.5;
+            z-index: 3;
+        }
+
+        50% {
+            opacity: 0.75;
+        }
+
+        75% {
+            opacity: 0.90;
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateX(0);
+            z-index: 3;
+        }
+    }
+
+    @keyframes hideSlideLeftToCenter {
+        0% {
+            transform: translate(-35%, 9%);
+        }
+
+        100% {
+            transform: translateX(0);
+        }
+    }
+
+    @keyframes hideSlideRightToCenter {
+        0% {
+            transform: translateX(30%);
+        }
+
+        100% {
+            transform: translateX(0);
+        }
+    }
+
+    @keyframes backSlideHiddenToRight {
+        0% {
+            transform: translateX(0);
+            opacity: 0;
+        }
+
+        25% {
+            opacity: 0.25;
+        }
+
+        50% {
+            opacity: 0.5;
+        }
+
+        75% {
+            opacity: 0.75;
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateX(30%);
+        }
+    }
+
+    @keyframes backSlideHiddenToLeft {
+        0% {
+            transform: translateX(0);
+            opacity: 0;
+        }
+
+        25% {
+            opacity: 0.25;
+        }
+
+        50% {
+            opacity: 0.5;
+        }
+
+        75% {
+            opacity: 0.75;
+        }
+
+        100% {
+            opacity: 1;
+            transform: translate(-35%, 9%);
+            z-index: 2;
+        }
+    }
+
+    @keyframes hideSlide {
+        0% {
+            opacity: 1;
+            transform: translateX(0);
+            z-index: 5;
+        }
+
+        25% {
+            opacity: 0.75;
+        }
+
+        50% {
+            opacity: 0.5;
+        }
+
+        75% {
+            opacity: 0.25;
+        }
+
+        80% {
+            opacity: 0.15;
+        }
+
+        90% {
+            opacity: 0.05;
+        }
+
+        100% {
+            opacity: 0;
+            transform: translateX(30%);
+            z-index: 0;
+        }
+    }
+}
+
+@media screen and (max-width: 835px) {
+    body {
+        overflow: hidden;
+    }
+
+    .container {
+        width: 400px;
+        max-width: 100%;
+        min-height: 550px;
+        transform: translate(-35%, 9%);
+    }
+
+    .container .login-container h1 {
+        font-size: 30px;
+        transform: translateY(-70px);
+    }
+
+    .container .login-container .input-box {
+        width: 320px;
+        padding: 10px;
+        margin: 10px;
+        transform: translateY(-10px);
+    }
+
+    .container .login-container input {
+        width: 220px;
+    }
+
+    .container .login-container input::placeholder {
+        font-size: 12px;
+    }
+
+    .container .login-container .input-box i {
+        font-size: 14px;
+    }
+
+    .container .login-container .remember-forgot {
+        font-size: 14px;
+    }
+
+    .container .login-container .remember-forgot label input {
+        width: 14px;
+        height: 14px;
+        transform: translate(-2px, -2px);
+    }
+
+    .container .login-container a {
+        color: var(--peach);
+        font-size: 14px;
+        margin-left: 60px;
+    }
+
+    .container .login-container button {
+        font-size: 12px;
+        padding: 12px 35px;
+        font-weight: 800;
+        transform: translateY(50px);
+    }
+
+    .container .login-container button i {
+        font-size: 10px;
+    }
+
+    .toggle-container {
+        width: 480px;
+        min-height: 650px;
+        transform: translateX(30%);
+    }
+
+    .toggle-container h1 {
+        font-size: 35px;
+    }
+
+    .toggle-container p {
+        font-size: 10px;
+    }
+
+    .toggle-container button {
+        transform: translate(45px, 30px);
+        font-size: 16px;
+        padding: 12px 35px;
+    }
+
+    .hidden-container {
+        width: 480px;
+        min-height: 650px;
+        backface-visibility: hidden;
+    }
+
+    .hidden-container .signUp-container h1 {
+        transform: translateY(-50px);
+        font-size: 30px;
+    }
+
+    .hidden-container .signUp-container .input-box {
+        width: 370px;
+        padding: 10px;
+        margin: 10px;
+        transform: translateY(-10px);
+    }
+
+    .hidden-container .signUp-container input {
+        width: 320px;
+    }
+
+    .hidden-container .signUp-container input::placeholder {
+        font-size: 12px;
+    }
+
+    .hidden-container .signUp-container i {
+        font-size: 14px;
+    }
+
+    .hidden-container .signUp-container .rememberMe-checkbox {
+        font-size: 14px;
+        transform: translateY(-2px);
+        margin-right: 60%;
+    }
+
+    .hidden-container .signUp-container .rememberMe-checkbox label input {
+        width: 14px;
+        height: 14px;
+        transform: translate(-2px, -2px);
+    }
+
+    .hidden-container .signUp-container button {
+        font-size: 12px;
+        padding: 12px 35px;
+        font-weight: 800;
+        transform: translateY(30px);
+    }
+
+    @keyframes fadeOutSlide {
+        0% {
+            opacity: 0;
+            transform: translateX(30%);
+        }
+
+        25% {
+            opacity: 0.5;
+            z-index: 3;
+        }
+
+        50% {
+            opacity: 0.75;
+        }
+
+        75% {
+            opacity: 0.90;
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateX(0);
+            z-index: 3;
+        }
+    }
+
+    @keyframes hideSlideLeftToCenter {
+        0% {
+            transform: translate(-35%, 9%);
+        }
+
+        100% {
+            transform: translateX(0);
+        }
+    }
+
+    @keyframes hideSlideRightToCenter {
+        0% {
+            transform: translateX(30%);
+        }
+
+        100% {
+            transform: translateX(0);
+        }
+    }
+
+    @keyframes backSlideHiddenToRight {
+        0% {
+            transform: translateX(0);
+            opacity: 0;
+        }
+
+        25% {
+            opacity: 0.25;
+        }
+
+        50% {
+            opacity: 0.5;
+        }
+
+        75% {
+            opacity: 0.75;
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateX(30%);
+        }
+    }
+
+    @keyframes backSlideHiddenToLeft {
+        0% {
+            transform: translateX(0);
+            opacity: 0;
+        }
+
+        25% {
+            opacity: 0.25;
+        }
+
+        50% {
+            opacity: 0.5;
+        }
+
+        75% {
+            opacity: 0.75;
+        }
+
+        100% {
+            opacity: 1;
+            transform: translate(-35%, 9%);
+            z-index: 2;
+        }
+    }
+
+    @keyframes hideSlide {
+        0% {
+            opacity: 1;
+            transform: translateX(0);
+            z-index: 5;
+        }
+
+        25% {
+            opacity: 0.75;
+        }
+
+        50% {
+            opacity: 0.5;
+        }
+
+        75% {
+            opacity: 0.25;
+        }
+
+        80% {
+            opacity: 0.15;
+        }
+
+        90% {
+            opacity: 0.05;
+        }
+
+        100% {
+            opacity: 0;
+            transform: translateX(30%);
+            z-index: 0;
+        }
+    }
+}
+
+@media screen and (max-width: 790px) {
+    body {
+        overflow: hidden;
+    }
+
+    .toggle-container {
+        width: 330px;
+        min-height: 450px;
+        transform: translateX(0);
+        z-index: 2;
+        transform-style: preserve-3d;
+        opacity: 0;
+    }
+
+    .toggle-container h1 {
+        font-size: 35px;
+        transform: rotateY(180deg);
+    }
+
+    .toggle-container p {
+        font-size: 12px;
+        transform: rotateY(180deg);
+    }
+
+    .toggle-container button {
+        transform: translate(70px, 30px) rotateY(180deg);
+        font-size: 14px;
+        padding: 12px 35px;
+    }
+
+    .toggle-container.active {
+        transform: perspective(300px) rotateY(180deg);
+        opacity: 1;
+    }
+
+    .container {
+        width: 330px;
+        position: fixed;
+        transform: translate(0);
+        min-height: 450px;
+        transform-style: preserve-3d;
+        backface-visibility: hidden;
+    }
+
+    .container .login-container h1 {
+        font-size: 20px;
+        transform: translateY(-50px);
+    }
+
+    .container .login-container .input-box {
+        width: 250px;
+        padding: 5px;
+        margin: 7px;
+        transform: translateY(0);
+    }
+
+    .container .login-container input {
+        width: 170px;
+        margin: 8px 50px;
+    }
+
+    .container .login-container input::placeholder {
+        font-size: 10px;
+    }
+
+    .container .login-container .input-box i {
+        font-size: 12px;
+    }
+
+    .container .login-container .input-box p {
+        left: 40px;
+    }
+
+    .container .login-container .remember-forgot {
+        font-size: 10px;
+    }
+
+    .container .login-container .remember-forgot label input {
+        width: 12px;
+        height: 12px;
+        transform: translate(-2px, -2px);
+    }
+
+    .container .login-container a {
+        color: var(--peach);
+        font-size: 10px;
+        margin-left: 60px;
+    }
+
+    .container .login-container button {
+        font-size: 12px;
+        padding: 10px 20px;
+        font-weight: 800;
+        transform: translateY(30px);
+    }
+
+    .container .login-container button i {
+        font-size: 8px;
+    }
+
+    .container .mobileSignUpRedirect {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        bottom: 72%;
+    }
+
+    .container .mobileSignUpRedirect p {
+        color: var(--brown);
+        font-size: 8px;
+        margin-right: 5px;
+    }
+
+    .container .mobileSignUpRedirectButton {
+        width: 60px;
+        height: 15px;
+        padding: 0;
+        font-size: 8px;
+        background-color: var(--tan);
+        border: 1px solid var(--brown);
+        border-radius: 10px;
+        color: var(--brown);
+    }
+
+    .container.active {
+        transform: perspective(300px) rotateY(180deg);
+        opacity: 0;
+    }
+
+    .hidden-container {
+        width: 330px;
+        min-height: 450px;
+        backface-visibility: hidden;
+    }
+
+    .hidden-container .signUp-container h1 {
+        transform: translateY(-20px);
+        font-size: 20px;
+    }
+
+    .hidden-container .signUp-container .input-box {
+        width: 250px;
+        padding: 5px;
+        margin: 7px;
+        transform: translateY(-10px);
+    }
+
+    .hidden-container .signUp-container input {
+        width: 170px;
+        margin: 8px 50px;
+    }
+
+    .hidden-container .signUp-container input::placeholder {
+        font-size: 10px;
+    }
+
+    .hidden-container .signUp-container i {
+        font-size: 12px;
+    }
+
+    .hidden-container .signUp-container p {
+        left: 40px;
+    }
+
+    .hidden-container .signUp-container .rememberMe-checkbox {
+        font-size: 10px;
+        transform: translateY(-2px);
+        margin-right: 55%;
+    }
+
+    .hidden-container .signUp-container .rememberMe-checkbox label input {
+        width: 12px;
+        height: 12px;
+        transform: translate(-2px, -2px);
+    }
+
+    .hidden-container .signUp-container button {
+        font-size: 12px;
+        padding: 10px 20px;
+        font-weight: 800;
+        transform: translateY(10px);
+    }
+
+    .hidden-container.active {
+        transform: perspective(300px) rotateY(-180deg);
+        opacity: 0;
+    }
+}
