--- a/Project/screens/views/accountList.html
+++ b/Project/screens/views/accountList.html
@@ -38,7 +38,9 @@
                 </div>
 
                 <div class="profile">
-                    <img src="../../images/Profile_Template_Pic/profile_template_woman_pic.jpg">
+                    <a href="../user/profileSettings.html">
+                        <img src="../../images/Profile_Template_Pic/profile_template_woman_pic.jpg">
+                    </a>
                     <span>Fake Profile</span>
                 </div>
 
@@ -166,7 +168,7 @@
                                 <td>mm/dd/yyyy</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
@@ -179,7 +181,7 @@
                                 <td>mm/dd/yyyy</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
@@ -192,7 +194,7 @@
                                 <td>mm/dd/yyyy</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
@@ -205,7 +207,7 @@
                                 <td>mm/dd/yyyy</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
@@ -218,7 +220,7 @@
                                 <td>mm/dd/yyyy</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
