--- a/Project/screens/views/bankList.html
+++ b/Project/screens/views/bankList.html
@@ -162,7 +162,7 @@
                                 <td>#</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
@@ -172,7 +172,7 @@
                                 <td>#</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
@@ -182,7 +182,7 @@
                                 <td>#</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
@@ -192,7 +192,7 @@
                                 <td>#</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
@@ -202,7 +202,7 @@
                                 <td>#</td>
                                 <td>
                                     <i class="fa-solid fa-eye preview"></i>
-                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    <i class="fa-solid fa-pen-to-square edit"></i>
                                     <i class="fa-solid fa-trash"></i>
                                 </td>
                             </tr>
